--- a/Dairy_Care_System/templates/productdetails.html
+++ b/Dairy_Care_System/templates/productdetails.html
@@ -77,6 +77,22 @@
             transform: scale(1.05); /* Slightly enlarge button on hover */
         }
 
+        .wish-button {
+            padding: 12px 24px;
+            font-size: 18px;
+            background-color: rgb(175, 0, 0);
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease; /* Smooth transition */
+        }
+
+        .wish-button:hover {
+            background-color: rgb(255, 0, 0);
+            transform: scale(1.05); /* Slightly enlarge button on hover */
+        }
+
         @media (max-width: 600px) {
             .images img {
                 width: 100%; /* Full width on smaller screens */
@@ -113,6 +129,7 @@
         <p><strong>Quantity:</strong> {{ product.product_quantity }} {{ product.quantity_unit }}</p>
         <p><strong>Price:</strong> Rs. {{ product.product_price }}</p>
         <p><strong>Status:</strong> {{ product.status|yesno:"Available,Not Available" }}</p><br>
+        <button onclick="location.href='{% url 'addwishlist' product.product_id %}'" class="wish-button">Wishlist</button>
         <button class="buy-button">Add to Cart</button>
     </div>
 
