--- a/Dairy_Care_System/templates/adminpage.html
+++ b/Dairy_Care_System/templates/adminpage.html
@@ -9,15 +9,15 @@
             background: url('{% static "images/adminpg.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
+            margin-left: 250px; /* Adjusting body margin to make space for the fixed sidebar */
         }
     </style>
 </head>
 <body>
 
-    <!-- Side Navigation -->
+    <!-- Side Navigation (Always Visible) -->
     <div id="mySidenav" class="sidenav">
-        <a>Hi! {{ username }}</a><br><br>
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br><br>
+        <a href="#">Dairy Care System</a><br><br><br>
         <a href="{% url 'reguserlist' 'all' %}">Users List</a><br>
         <a href="{% url 'productslist' %}">Products List</a><br>
         <a href="{% url 'animalslist' %}">Animals List</a><br>
@@ -29,24 +29,8 @@
     <!-- Navigation Bar-->
     <ul>
         <div class="header">
-            <!-- Hamburger Icon -->
-            <span class="hamburger" onclick="openNav()">&#9776;</span>
-            
-            <!-- <div class="nav-item">
-                <li><b><a href="{% url 'reguserlist' 'all' %}">Users list</a></b></li>
-            </div>
-            <div class="nav-item">
-                <li><b><a href="{% url 'productslist' %}">Products list</a></b></li>
-            </div>
-            <div class="nav-item">
-                <li><b><a href="{% url 'animalslist' %}">Animals list</a></b></li>
-            </div>
-            <div class="nav-item">
-                <li><b><a href="#">Milk details</a></b></li>
-            </div>
-            <div class="nav-item">
-                <li><b><a href="#">Feedback Review</a></b></li>
-            </div> -->
+            <!-- name -->
+            <!-- <span class="name">Dairy Care System</span> -->
             <div class="nav-item">
                 <li>
                     <b><a href="#">{{ username }}</a></b>
@@ -72,17 +56,6 @@
             <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
         </footer>
     </center>
-
-    <!-- JavaScript to toggle the side navigation -->
-    <script>
-        function openNav() {
-            document.getElementById("mySidenav").style.width = "250px";
-        }
-
-        function closeNav() {
-            document.getElementById("mySidenav").style.width = "0";
-        }
-    </script>
 
 </body>
 </html>
