--- a/Dairy_Care_System/templates/feedbackpage.html
+++ b/Dairy_Care_System/templates/feedbackpage.html
@@ -17,11 +17,34 @@
     </style>
 </head>
 <body>
+
+    <!-- Navigation Bar-->
+<ul>
+    <div class="header">
+        <div class="nav-item">
+            <li><b><a href="{% url 'custproductslist' %}">Products list</a></b></li>
+        </div>
+        <div class="nav-item">
+            <li><b><a href="#">Your Orders</a></b></li>
+        </div>
+        <div class="nav-item">
+            <li><b><a href="{% url 'feedbackpage' %}">Your Feedback</a></b></li>
+        </div>
+        <div class="nav-item">
+            <li>
+                <b><a href="#">{{ username }}</a></b>
+                <div class="dropdown-content">
+                    <a href="{% url 'userprofile' %}">Profile</a>
+                    <a href="{% url 'customerpage' %}">Home</a>
+                    <a href="{% url 'logout' %}">Logout</a>
+                </div>
+            </li>
+        </div>
+    </div>
+</ul>
+
     <div class="container">
-        <a href="{% url 'customerpage' %}" class="back-link">Back</a>
-        <a href="{% url 'logout' %}" class="home-link">
-            <img src="{% static 'images/homeblue.jpg' %}" alt="Home">
-        </a>
+        <!-- <a href="{% url 'customerpage' %}" class="back-link">Back</a> -->
         <div class="feedback-box">
             <h2><u>Feedback Record</u></h2>
             <form id="feedbackForm">
