--- a/Dairy_Care_System/templates/customerpage.html
+++ b/Dairy_Care_System/templates/customerpage.html
@@ -19,6 +19,7 @@
     <div id="mySidenav" class="sidenav">
         <a href="#">Dairy Care System</a><br><br><br>
         <a href="{% url 'custproductslist' %}">Products List</a><br>
+        <a href="{% url 'wishlist' %}">Your Wishlist</a><br>
         <a href="#">Your Orders</a><br>
         <a href="{% url 'feedbackpage' %}">Your Feedback</a><br>
     </div>
