--- a/Dairy_Care_System/dairy/static/css/adminpage.css
+++ b/Dairy_Care_System/dairy/static/css/adminpage.css
@@ -3,7 +3,7 @@ ul {
     margin: 0;
     padding: 5px;
     overflow: hidden;
-    background-color: black;
+    background-color: #000000;
     display: flex;
     align-items: center;
 }
@@ -22,7 +22,7 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 li {
@@ -32,10 +32,10 @@ li {
 
 li a {
     display: block;
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
     text-decoration: none;
-    padding: 10px 12px;
+    padding: 4px 5px;
     transition: background-color 0.3s ease;
 }
 
@@ -123,7 +123,8 @@ footer {
     z-index: 1; /* Sit on top */
     top: 0;
     left: 0;
-    background-color: #000000; /* Black background color */
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+    backdrop-filter: blur(10px); /* Blur effect */
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 20px; /* Padding on top */
 }
@@ -138,7 +139,7 @@ footer {
 }
 
 .sidenav a:hover {
-    color: #f1f1f1;
+    color: #000000;
 }
 
 /* Remove the open/close functionality */
@@ -150,6 +151,7 @@ footer {
 body {
     margin-left: 250px;
 }
+
 
 /* Hamburger icon inside the navigation bar */
 .name {
