--- a/Dairy_Care_System/templates/custproductslist.html
+++ b/Dairy_Care_System/templates/custproductslist.html
@@ -20,6 +20,9 @@
             <li><b><a href="{% url 'custproductslist' %}">Products list</a></b></li>
         </div>
         <div class="nav-item">
+            <li><b><a href="{% url 'wishlist' %}">Your Wishlist</a></b></li>
+        </div>
+        <div class="nav-item">
             <li><b><a href="#">Your Orders</a></b></li>
         </div>
         <div class="nav-item">
