--- a/Dairy_Care_System/templates/addanimal.html
+++ b/Dairy_Care_System/templates/addanimal.html
@@ -135,9 +135,25 @@
             background-color: #f9f9f9;
         }
 
+        /* Styling for the back link in the upper left corner */
+        .back-link {
+            position: absolute;
+            top: 20px;
+            left: 30px;
+            font-size: 30px;
+            color: black;
+            text-decoration: none;
+            font-family: 'Comic Sans MS', cursive;
+        }
+
+        .back-link:hover {
+            text-decoration: underline;
+        }
+
     </style>
 </head>
 <body>
+    <a href="{% url 'animalslist' %}" class="back-link"><b>BACK</b></a>
     <div class="container">
         <center><h2>Add Animal</h2></center>
         <form method="post" enctype="multipart/form-data" action="{% url 'addanimal' %}">
