--- a/Dairy_Care_System/templates/adminpage.html
+++ b/Dairy_Care_System/templates/adminpage.html
@@ -12,7 +12,8 @@
             margin-left: 250px; /* Adjusting body margin to make space for the fixed sidebar */
         }
     </style>
-    
+    <!-- Add SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 </head>
 <body>
 
@@ -27,7 +28,7 @@
         <a href="#">Feedback Review</a><br>
     </div>
 
-    <!-- Navigation Bar-->
+    <!-- Navigation Bar -->
     <ul>
         <div class="header">
             <div class="nav-item">
@@ -35,7 +36,8 @@
                     <b><a href="#" class="username" onclick="toggleDropdown()">{{ username }}</a></b>
                     <div class="dropdown-content" id="dropdown-content">
                         <a href="{% url 'userprofile' %}">Profile</a>
-                        <a href="{% url 'logout' %}">Logout</a>
+                        <!-- Change Logout link to trigger a custom SweetAlert -->
+                        <a href="#" onclick="confirmLogout()">Logout</a>
                     </div>
                 </li>
             </div>
@@ -56,6 +58,9 @@
         </footer>
     </center>
 
+    <!-- Add SweetAlert2 JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <script>
         // Toggle dropdown on click
         function toggleDropdown() {
@@ -75,6 +80,25 @@
                     dropdown.style.display = "none";
                 }
             }
+        }
+
+        // Custom SweetAlert2 logout confirmation
+        function confirmLogout() {
+            Swal.fire({
+                title: 'Are you sure?',
+                text: "You will be logged out of the system!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, logout',
+                cancelButtonText: 'Cancel'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Redirect to logout URL
+                    window.location.href = "{% url 'logout' %}";
+                }
+            });
         }
     </script>
 
